Fixed minor Flex layout issue in website docs

--- a/website/src/components/Method.module.css
+++ b/website/src/components/Method.module.css
@@ -1,9 +1,5 @@
 .MethodApi {
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-start;
   padding: 2rem 2rem 0;
   background-color: #fff;
   box-sizing: border-box;
